Actions
Bug #4781
closedsd shouldn't abuse ddi_get_time(9f)
Start date:
2014-04-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
ddi_get_time() returns a Unix timestamp based on the current TOD. If the TOD setting changes for whatever reason (daylight saving time adjustments, NTP), the value returned by ddi_get_time() may change non-monotonically. This makes it unsuitable for calculating timeouts and wait times.
Related issues
Updated by Electric Monk about 8 years ago
- Status changed from New to Closed
- % Done changed from 80 to 100
git commit 7c64340fe7f813fbf9b6874c9422f7765bc54eb8
commit 7c64340fe7f813fbf9b6874c9422f7765bc54eb8 Author: Josef 'Jeff' Sipek <josef.sipek@nexenta.com> Date: 2014-05-14T23:37:33.000Z 4781 sd shouldn't abuse ddi_get_time(9f) Reviewed by: Richard Elling <richard.elling@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions