4781 sd shouldn't abuse ddi_get_time(9f) Reviewed by: Richard Elling <richard.elling@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>